--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint src --ext js,jsx"
+    "lint": "eslint src --ext js,jsx",
+    "vercel-build": "npm install && vite build"
   },
   "browserslist": {
     "production": [
